# rag-refresher

./: .gitignore  README.md  dataIngestion.md  learn.md  notes.md  pyproject.toml
Data Ingestion/: dataIngestion.ipynb  dataPDF.ipynb  random.txt
FAISS/: faiss.ipynb  self.txt
HBSearch/: DandS.txt  MMR.ipynb  denseAndsparse.ipynb  mmr.txt  reRanking.ipynb  topic.txt
LangGraph/: chatbot.ipynb  multipleTools.ipynb  simpleGraph.ipynb  tools.ipynb
ReAct/: ReAct_Agent.ipynb
agenticRAG/: agent.ipynb  agenticRAG.ipynb  langchain.txt  langgraph.txt  sample.txt
chromaDB/: chroma.ipynb  sample.txt
chromaDB/chromadb/: chroma.sqlite3
comp/: comp.ipynb  ml.txt
comp/faiss_index/: index.faiss  index.pkl
le/: demo.txt  simple.ipynb
self/: sample.txt  self.ipynb  selfWithHistory.ipynb
self/Chromadb/: chroma.sqlite3
semanticChunking/: langchain.txt  langchainSemantic.ipynb  ragSemantic.ipynb  semanticChunking.ipynb
simpRAG/: doc.txt  simpRag.ipynb
