[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.1",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "lxml>=6.0.2",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
]
